--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rbxts/parallelsync",
+  "name": "@n1b/parallelsync",
   "author": {
 	"name": "nooneisback",
 	"url": "https://github.com/nooneisback"
